Fixing the position of the buttons on Mobile Safari

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,7 @@ body {
 div.input-field button.prefix{
   background: none;
   border: none;
+  padding: 0;
 }
 
 div.row div.input-field *{
